add linkie to login to wm.io u

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
   <h3>Pictures</h3>
   <img class="about-img" src="/static/img/ducati.jpg">
   <img class="about-img" src="/static/img/kas.jpg">
+  <a href="https://github.com/maxfii" rel="me">github.com/maxfii</a>
 </div>
 </div>
     <footer>&copy; 2025 Jezen Thomas</footer>
