add wm.io linki

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="icon" type="image/gif" href="/doom.gif">
     <link rel="stylesheet" type="text/css" href="/css/d5f640a9850832edcabd8c7d91edc267.css">
     <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS feed">
+    <link rel="webmention" href="https://webmention.io/maxfii.github.io/webmention" />
   </head>
   <body>
     <header>
