fetch mentions, show to console

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <link rel="icon" type="image/gif" href="/doom.gif">
     <link rel="stylesheet" type="text/css" href="/css/d5f640a9850832edcabd8c7d91edc267.css">
     <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS feed">
-    <link rel="webmention" href="https://webmention.io/maxfii.github.io/webmention" />
   </head>
   <body>
     <header>
@@ -203,6 +202,11 @@
 </div>
     <footer>&copy; 2025 Jezen Thomas</footer>
 
+    <script type="text/javascript">
+    fetch("https://webmention.io/api/count?target=https://maxfii.github.io/page/100")
+        .then(response => response.json())
+        .then(responseJson => console.log(responseJson));
+    </script>
 
     <script type="text/javascript">
       [].slice.call(document.querySelectorAll('.footnote-ref sup')).forEach(function(el) {
