--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="icon" type="image/gif" href="/doom.gif">
     <link rel="stylesheet" type="text/css" href="/css/d5f640a9850832edcabd8c7d91edc267.css">
     <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS feed">
+    <link rel="webmention" href="https://webmention.io/maxfii.github.io/webmention" />
   </head>
   <body>
     <header>
@@ -203,7 +204,7 @@
     <footer>&copy; 2025 Jezen Thomas</footer>
 
     <script type="text/javascript">
-    fetch("https://webmention.io/api/count?target=https://maxfii.github.io/page/100")
+    fetch("https://webmention.io/api/mentions.html?token=pbj7jHLLhU_iUTPiavjsPg")
         .then(response => response.json())
         .then(responseJson => console.log(responseJson));
     </script>
